@@ -37,6 +37,7 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
   - CHG: Polish and document simuOpt. getParam function now belongs to the simuOpt
 		class.
   - CHG: Remove jump and jumpIfFalse from parameter specification.
+  - CHG: Replace --noDialog with --gui=False (and allow for values such as Tkinter).
 		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
